--- a/webapp/templates/percentage.html
+++ b/webapp/templates/percentage.html
@@ -8,7 +8,7 @@
 <button id="reset" class="btn btn-secondary ms-2">Reset</button>
 <div id="spinner" class="spinner-border text-primary ms-2 d-none" role="status"></div>
 <div id="progress" class="progress mt-2 d-none">
-  <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:100%"></div>
+  <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" style="width:100%"></div>
 </div>
 <pre id="log" class="mt-3 bg-light p-2" style="height:300px;overflow:auto;"></pre>
 <div id="status" class="alert alert-success d-none mt-2"></div>
