--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -1,24 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-<h3 class="mb-4 text-center">Welcome</h3>
-<div class="row g-4">
-  <div class="col-md-6">
-    <div class="card shadow-sm h-100">
-      <div class="card-body d-flex flex-column">
-        <h5 class="card-title"><i class="bi bi-percent"></i> Percentage Price Update</h5>
-        <p class="card-text flex-grow-1">Adjust all prices by a percentage.</p>
-        <a class="btn btn-brand mt-auto" href="{{ url_for('main.percentage_updater') }}">Open</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-6">
-    <div class="card shadow-sm h-100">
-      <div class="card-body d-flex flex-column">
-        <h5 class="card-title"><i class="bi bi-table"></i> Variant Price Update</h5>
-        <p class="card-text flex-grow-1">Edit surcharges for each chain and run the updater.</p>
-        <a class="btn btn-brand mt-auto" href="{{ url_for('main.variant_updater') }}">Open</a>
-      </div>
-    </div>
-  </div>
-</div>
+<h3>Welcome</h3>
+<p>Select an action:</p>
+<ul>
+  <li><a href="{{ url_for('main.percentage_updater') }}">Percentage Updater</a></li>
+  <li><a href="{{ url_for('main.variant_updater') }}">Variant Updater</a></li>
+</ul>
 {% endblock %}
