--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -4,21 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-9lw2gfbzXGBw64frtB54HuZk7sP6/Iex9jYYmZC9U1E4Yzmyd2zh1SeDsICoZ6irMIXgYYWf0iD98s+DAaYEiw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Azor Price Updater</title>
-    <style>
-        body { background-color: #f8f9fa; }
-        .navbar { background-color: #343a40; }
-        .navbar-brand, .nav-link, .navbar-text { color: #fff !important; }
-        .nav-link.active { font-weight: bold; }
-        .btn-brand { background-color: #008cba; color: #fff; }
-        h3, h5 { margin-top: 1rem; }
-    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Azor Updater</a>
-    <div class="collapse navbar-collapse">
+    <a class="navbar-brand d-flex align-items-center" href="{{ url_for('main.home') }}">
+      <img src="{{ url_for('static', filename='assets/logo/473718710_1348387132818131_72892133825066643_n-removebg-preview_1.png') }}" alt="Azor logo" class="me-2">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
       {% if session.get('user') %}
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -32,8 +31,13 @@
         </li>
       </ul>
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><span class="navbar-text me-3">Logged in as {{ session['user'] }}</span></li>
-        <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a></li>
+        <li class="nav-item d-flex align-items-center me-3">
+          <i class="fa-solid fa-user me-1"></i>
+          <span class="navbar-text">{{ session['user'] }}</span>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.logout') }}"><i class="fa-solid fa-right-from-bracket me-1"></i>Logout</a>
+        </li>
       </ul>
       {% endif %}
     </div>
