--- a/webapp/templates/percentage.html
+++ b/webapp/templates/percentage.html
@@ -1,13 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
-<h3>Percentage Price Update</h3>
-<div class="mb-3">
-  <input id="percent" class="form-control" type="number" step="0.01" placeholder="Enter percentage">
+<h3 class="mb-3"><i class="fa-solid fa-percent me-2"></i>Percentage Price Update</h3>
+<div class="mb-3 row g-2 align-items-center">
+  <div class="col-sm-4">
+    <input id="percent" class="form-control" type="number" step="0.01" placeholder="Enter percentage">
+  </div>
+  <div class="col-auto">
+    <button id="start" class="btn btn-brand">Run</button>
+    <button id="reset" class="btn btn-secondary ms-2">Reset</button>
+    <div id="spinner" class="spinner-border text-primary ms-2 d-none" role="status"></div>
+  </div>
 </div>
-<button id="start" class="btn btn-brand">Run</button>
-<button id="reset" class="btn btn-secondary ms-2">Reset</button>
-<div id="spinner" class="spinner-border text-primary ms-2 d-none" role="status"></div>
-<pre id="log" class="mt-3 bg-light p-2" style="height:300px;overflow:auto;"></pre>
+<pre id="log" class="mt-3" style="height:300px;overflow:auto;"></pre>
 <div id="status" class="alert alert-success d-none mt-2"></div>
 {% endblock %}
 {% block scripts %}
