--- a/webapp/templates/reset.html
+++ b/webapp/templates/reset.html
@@ -1,22 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<h3 class="mb-3"><i class="fa-solid fa-gears me-2"></i>Variant Price Update</h3>
-<form method="post" class="mb-3">
-  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-  {% for cat, chains in surcharges.items() %}
-  <h5 class="mt-3">{{ cat|capitalize }}</h5>
-  {% for chain, val in chains.items() %}
-  <div class="mb-2 row g-2 align-items-center">
-    <label class="col-sm-4 col-form-label">{{ chain }}</label>
-    <div class="col-sm-4">
-      <input class="form-control" type="number" step="0.01" name="{{ cat }}_{{ chain.replace(' ', '_') }}" value="{{ val }}">
-    </div>
-  </div>
-  {% endfor %}
-  {% endfor %}
-  <button class="btn btn-brand mt-2" type="submit">Save Changes</button>
-</form>
-<button id="start" class="btn btn-brand">Run Update</button>
+<h3 class="mb-3"><i class="fa-solid fa-rotate-left me-2"></i>Price Reset</h3>
+<p>This will restore all prices from the last backup file.</p>
+<button id="start" class="btn btn-brand">Run Reset</button>
 <div id="spinner" class="spinner-border text-primary ms-2 d-none" role="status"></div>
 <pre id="log" class="mt-3" style="height:300px;overflow:auto;"></pre>
 <div id="status" class="alert alert-success d-none mt-2"></div>
@@ -32,13 +18,13 @@
     status.classList.add('d-none');
     spinner.classList.remove('d-none');
     startBtn.disabled = true;
-    const es = new EventSource('/stream/variant');
+    const es = new EventSource('/stream/reset');
     es.onmessage = e => {
       if(e.data === '--done--') {
         es.close();
         spinner.classList.add('d-none');
         startBtn.disabled = false;
-        status.textContent = 'Update completed!';
+        status.textContent = 'Reset completed!';
         status.classList.remove('d-none');
       } else {
         log.textContent += e.data + '\n';
