--- a/webapp/templates/login.html
+++ b/webapp/templates/login.html
@@ -3,22 +3,54 @@
 <div class="row justify-content-center">
   <div class="col-md-4">
 
-    <h3 class="mb-3 text-center"><i class="fa-solid fa-circle-user me-1"></i>Login</h3>
+    <h3 class="mb-3 text-center">
+      <svg class="icon me-1" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="8" cy="8" r="7" fill="none" stroke="currentColor" />
+        <circle cx="8" cy="5.5" r="3" />
+        <path d="M4 13c1.5-2 6-2 8 0" />
+      </svg>
+      Login
+    </h3>
 
     <form method="post">
       <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
       <div class="mb-3 input-group">
-        <span class="input-group-text"><i class="fa-solid fa-user"></i></span>
+        <span class="input-group-text">
+          <svg class="icon" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="8" cy="5" r="3" />
+            <path d="M2 14c0-3 4-5 6-5s6 2 6 5H2z" />
+          </svg>
+        </span>
         <input class="form-control" type="text" name="username" placeholder="Username" required>
       </div>
       <div class="mb-3 input-group">
-        <span class="input-group-text"><i class="fa-solid fa-lock"></i></span>
+        <span class="input-group-text">
+          <svg class="icon" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+            <rect x="3" y="7" width="10" height="8" rx="2" />
+            <path d="M5 7V4a3 3 0 0 1 6 0v3" />
+          </svg>
+        </span>
         <input class="form-control" id="password" type="password" name="password" placeholder="Password" required>
-        <button class="btn btn-outline-secondary" type="button" id="togglePass"><i class="fa-solid fa-eye"></i></button>
+        <button class="btn btn-outline-secondary" type="button" id="togglePass">
+          <svg class="icon eye-open" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1 8s3-5 7-5 7 5 7 5-3 5-7 5-7-5-7-5z" />
+            <circle cx="8" cy="8" r="2.5" />
+          </svg>
+          <svg class="icon eye-closed d-none" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1 8s3-5 7-5 7 5 7 5-3 5-7 5-7-5-7-5z" />
+            <circle cx="8" cy="8" r="2.5" />
+            <path d="M2 2l12 12" stroke-width="2" />
+          </svg>
+        </button>
       </div>
       {% if error %}<div class="text-danger mb-2">{{ error }}</div>{% endif %}
 
-      <button class="btn btn-brand w-100" type="submit"><i class="fa-solid fa-right-to-bracket me-1"></i>Login</button>
+      <button class="btn btn-brand w-100" type="submit">
+        <svg class="icon me-1" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+          <path d="M8 3l4 5-4 5M1 8h11" stroke="currentColor" stroke-width="2" fill="none" />
+        </svg>
+        Login
+      </button>
 
     </form>
   </div>
