--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -1,46 +1,51 @@
 <!doctype html>
-<html lang="en">
+<html lang="{{ g.lang }}">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-9lw2gfbzXGBw64frtB54HuZk7sP6/Iex9jYYmZC9U1E4Yzmyd2zh1SeDsICoZ6irMIXgYYWf0iD98s+DAaYEiw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Azor Price Updater</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
     <a class="navbar-brand d-flex align-items-center" href="{{ url_for('main.home') }}">
-      <img src="{{ url_for('static', filename='assets/logo/473718710_1348387132818131_72892133825066643_n-removebg-preview_1.png') }}" alt="Azor logo" class="me-2">
+      <img src="{{ url_for('static', filename='assets/logo/473718710_1348387132818131_72892133825066643_n-removebg-preview_1.png') }}" alt="Azor logo" class="logo-img">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      {% if session.get('user') %}
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        {% if session.get('user') %}
         <li class="nav-item">
-          <a class="nav-link {{ 'active' if request.path == url_for('main.home') else '' }}" href="{{ url_for('main.home') }}">Home</a>
+          <a class="nav-link {{ 'active' if request.path == url_for('main.home') else '' }}" href="{{ url_for('main.home') }}">{{ t('home') }}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ 'active' if request.path == url_for('main.percentage_updater') else '' }}" href="{{ url_for('main.percentage_updater') }}">Percentage</a>
+          <a class="nav-link {{ 'active' if request.path == url_for('main.percentage_updater') else '' }}" href="{{ url_for('main.percentage_updater') }}">{{ t('percentage') }}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ 'active' if request.path == url_for('main.variant_updater') else '' }}" href="{{ url_for('main.variant_updater') }}">Variant</a>
+          <a class="nav-link {{ 'active' if request.path == url_for('main.variant_updater') else '' }}" href="{{ url_for('main.variant_updater') }}">{{ t('variant') }}</a>
         </li>
+        {% endif %}
       </ul>
       <ul class="navbar-nav ms-auto">
+        {% if session.get('user') %}
         <li class="nav-item d-flex align-items-center me-3">
           <i class="fa-solid fa-user me-1"></i>
           <span class="navbar-text">{{ session['user'] }}</span>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('auth.logout') }}"><i class="fa-solid fa-right-from-bracket me-1"></i>Logout</a>
+          <a class="nav-link" href="{{ url_for('auth.logout') }}"><i class="fa-solid fa-right-from-bracket me-1"></i>{{ t('logout') }}</a>
+        </li>
+        {% endif %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('main.toggle_language') }}">{{ t('language') }}</a>
         </li>
       </ul>
-      {% endif %}
     </div>
   </div>
 </nav>
